# nutrition-helper

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  TESTING_FRONTEND.md  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: CI_SETUP.md  copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tarpaulin.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251104000001_initial_schema.sql  20251106000001_add_weekly_limit_to_templates.sql  20251112165422_allow_zero_weekly_suggestion.sql  20251117000001_fix_weekly_views.sql  20251117000002_fix_monday_weeks.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: meal_entry_commands.rs  meal_option_commands.rs  meal_template_commands.rs  mod.rs  tag_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: enums.rs  meal_entry.rs  meal_option.rs  meal_template.rs  mod.rs  tag.rs
src-tauri/src/repository/: meal_entry_repository.rs  meal_option_repository.rs  meal_template_repository.rs  mod.rs  tag_repository.rs
src-tauri/src/services/: mod.rs  validation_service.rs
src-tauri/tests/: command_integration_tests.rs
src-tauri/tests/db_tests/: schema_tests.rs
src-tauri/tests/helpers/: fixtures.rs  mod.rs  test_db.rs
src-tauri/tests/integration/: repository_tests.rs
src/lib/: api.test.ts  api.ts  types.ts  utils.ts
src/store/: index.ts
src/styles/: globals.css
src/test/: setup.ts  types.test.ts
src/views/: DailyView.tsx  (+3 more)
(+11 files in other folders)
